--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <h3>Форма регистрации</h3>
                 <fieldset class="form__fieldset">
                     <div class="form__field">
-                        <input class="form__input" type="text" name="name" pattern="^[А-ЯЁ][а-яё]*(\S[А-ЯЁ][а-яё]*)*$" placeholder="Имя" required />
+                        <input class="form__input" type="text" name="name" pattern="^[А-ЯЁ][а-яё]*(\-[А-ЯЁ][а-яё]*)*$" placeholder="Имя" required />
                     </div>
                     <div class="form__field">
                         <input class="form__input" type="email" name="email" pattern="^([a-zA-Z0-9-_\.]{2,})+(@{1})([a-z]{2,})+\.(\w{2,})$" placeholder="E-Mail" required />
