--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                         <input class="form__input" type="text" name="name" pattern="^[А-ЯЁ][а-яё]*(\-[А-ЯЁ][а-яё]*)*$" placeholder="Имя" required />
                     </div>
                     <div class="form__field">
-                        <input class="form__input" type="email" name="email" pattern="^([a-zA-Z0-9-_\.]{2,})+(@{1})([a-z]{2,})+\.(\w{2,})$" placeholder="E-Mail" required />
+                        <input class="form__input" type="email" name="email" pattern="^([a-zA-Z0-9-_\.]{2,})+(@{1})([a-z]{2,})+\.(\w{2,})((\.\w{2,}){0,})?$" placeholder="E-Mail" required />
                         <span class="form__error">e-mail в формате: students-yandex@yandex.ru</span>
                     </div>
                     <div class="form__field">
